Fix the missing {priority,runtime}ClassName
Skip-Release-Notes

Change-Id: Ib967555a008a7bddb0529750937864f6b001e772
(cherry picked from commit 36b8922448ef7b40de6b51d4e92c9142dd33a417)

--- a/charts/barbican/values.yaml
+++ b/charts/barbican/values.yaml
@@ -58,10 +58,12 @@ pod:
   priorityClassName:
     barbican_api: null
     barbican_tests: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     barbican_api: null
     barbican_tests: null
+    bootstrap: null
     db_sync: null
   security_context:
     barbican:
