--- a/charts/heat/values.yaml
+++ b/charts/heat/values.yaml
@@ -1023,6 +1023,8 @@ pod:
     heat_engine_cleaner: null
     heat_purge_deleted: null
     heat_engine: null
+    heat_trusts: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     heat_api: null
@@ -1032,6 +1034,8 @@ pod:
     heat_engine_cleaner: null
     heat_purge_deleted: null
     heat_engine: null
+    heat_trusts: null
+    bootstrap: null
     db_sync: null
   security_context:
     heat:
