--- a/charts/horizon/values.yaml
+++ b/charts/horizon/values.yaml
@@ -1106,10 +1106,12 @@ pod:
   priorityClassName:
     horizon: null
     horizon_tests: null
+    db_init: null
     db_sync: null
   runtimeClassName:
     horizon: null
     horizon_tests: null
+    db_init: null
     db_sync: null
   security_context:
     horizon:
