--- a/charts/magnum/values.yaml
+++ b/charts/magnum/values.yaml
@@ -485,10 +485,12 @@ pod:
   priorityClassName:
     magnum_api: null
     magnum_conductor: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     magnum_api: null
     magnum_conductor: null
+    bootstrap: null
     db_sync: null
   user:
     magnum:
