--- a/charts/manila/values.yaml
+++ b/charts/manila/values.yaml
@@ -72,6 +72,7 @@ pod:
     manila_scheduler: null
     manila_tests: null
     manila_share: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     manila_api: null
@@ -79,6 +80,7 @@ pod:
     manila_scheduler: null
     manila_tests: null
     manila_share: null
+    bootstrap: null
     db_sync: null
   security_context:
     manila:
