--- a/charts/nova/values.yaml
+++ b/charts/nova/values.yaml
@@ -2050,6 +2050,7 @@ pod:
     nova_service_cleaner: null
     nova_compute_ironic: null
     nova_tests: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     nova_compute: null
@@ -2064,6 +2065,7 @@ pod:
     nova_service_cleaner: null
     nova_compute_ironic: null
     nova_tests: null
+    bootstrap: null
     db_sync: null
   probes:
     rpc_timeout: 60
