--- a/charts/staffeln/values.yaml
+++ b/charts/staffeln/values.yaml
@@ -57,10 +57,14 @@ pod:
   priorityClassName:
     staffeln_api: null
     staffeln_conductor: null
+    staffeln_tests: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     staffeln_api: null
     staffeln_conductor: null
+    staffeln_tests: null
+    bootstrap: null
     db_sync: null
   security_context:
     staffeln:
