--- a/roles/manila/tests/runtimeclass_test.yaml
+++ b/roles/manila/tests/runtimeclass_test.yaml
@@ -8,6 +8,7 @@ tests:
       - templates/deployment-share.yaml
       - templates/pod-rally-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     asserts:
       - template: templates/deployment-api.yaml
         documentIndex: 3
@@ -31,6 +32,10 @@ tests:
           path: spec.runtimeClassName
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        notExists:
+          path: spec.template.spec.runtimeClassName
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         notExists:
           path: spec.template.spec.runtimeClassName
 
@@ -42,6 +47,7 @@ tests:
       - templates/deployment-share.yaml
       - templates/pod-rally-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     set:
       pod:
         runtimeClassName:
@@ -51,6 +57,7 @@ tests:
           manila_tests: kata-clh
           manila_share: kata-clh
           db_sync: kata-clh
+          bootstrap: kata-clh
     asserts:
       - template: templates/deployment-api.yaml
         documentIndex: 3
@@ -79,6 +86,11 @@ tests:
           value: kata-clh
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        equal:
+          path: spec.template.spec.runtimeClassName
+          value: kata-clh
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         equal:
           path: spec.template.spec.runtimeClassName
           value: kata-clh
