--- a/charts/ironic/values.yaml
+++ b/charts/ironic/values.yaml
@@ -107,6 +107,7 @@ conf:
       api_url: null
     database:
       connection: null
+      max_retries: -1
     deploy:
       http_root: /var/lib/openstack-helm/httpboot
     glance:
@@ -641,9 +642,13 @@ endpoints:
 pod:
   priorityClassName:
     ironic_api: null
+    ironic_conductor: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     ironic_api: null
+    ironic_conductor: null
+    bootstrap: null
     db_sync: null
   affinity:
     anti:
