--- a/charts/keystone/values.yaml
+++ b/charts/keystone/values.yaml
@@ -163,12 +163,24 @@ pod:
     keystone_tests: null
     keystone_credential_rotate: null
     keystone_fernet_rotate: null
+    keystone_credential_setup: null
+    keystone_fernet_setup: null
+    keystone_domain_manage: null
+    keystone_credential_cleanup: null
+    bootstrap: null
+    db_init: null
     db_sync: null
   runtimeClassName:
     keystone_api: null
     keystone_tests: null
     keystone_credential_rotate: null
     keystone_fernet_rotate: null
+    keystone_credential_setup: null
+    keystone_fernet_setup: null
+    keystone_domain_manage: null
+    keystone_credential_cleanup: null
+    bootstrap: null
+    db_init: null
     db_sync: null
   security_context:
     keystone:
