--- a/charts/neutron/templates/daemonset-bagpipe-bgp.yaml
+++ b/charts/neutron/templates/daemonset-bagpipe-bgp.yaml
@@ -57,10 +57,10 @@ spec:
 {{ tuple "neutron_bagpipe_bgp" . | include "helm-toolkit.snippets.custom_pod_annotations" | indent 8 }}
     spec:
 {{ dict "envAll" $envAll "application" "neutron_bagpipe_bgp" | include "helm-toolkit.snippets.kubernetes_pod_security_context" | indent 6 }}
-{{ with .Values.pod.priorityClassName.neutron_bagpipe_bgp }}
+{{ with .Values.pod.priorityClassName.bagpipe_bgp }}
       priorityClassName: {{ . }}
 {{ end }}
-{{ with .Values.pod.runtimeClassName.neutron_bagpipe_bgp }}
+{{ with .Values.pod.runtimeClassName.bagpipe_bgp }}
       runtimeClassName: {{ . }}
 {{ end }}
       serviceAccountName: {{ $serviceAccountName }}
