--- a/charts/neutron/values.yaml
+++ b/charts/neutron/values.yaml
@@ -375,15 +375,15 @@ dependencies:
 
 pod:
   priorityClassName:
-    neutron_bagpipe_bgp: null
-    neutron_bgp_dragent: null
+    bagpipe_bgp: null
+    bgp_dragent: null
     neutron_dhcp_agent: null
     neutron_l2gw_agent: null
     neutron_l3_agent: null
     neutron_lb_agent: null
     neutron_metadata_agent: null
     neutron_netns_cleanup_cron: null
-    neutron_ovn_vpn_agent: null
+    ovn_vpn_agent: null
     neutron_ovn_metadata_agent: null
     neutron_ovs_agent: null
     neutron_sriov_agent: null
@@ -391,17 +391,18 @@ pod:
     neutron_rpc_server: null
     neutron_server: null
     neutron_tests: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
-    neutron_bagpipe_bgp: null
-    neutron_bgp_dragent: null
+    bagpipe_bgp: null
+    bgp_dragent: null
     neutron_dhcp_agent: null
     neutron_l2gw_agent: null
     neutron_l3_agent: null
     neutron_lb_agent: null
     neutron_metadata_agent: null
     neutron_netns_cleanup_cron: null
-    neutron_ovn_vpn_agent: null
+    ovn_vpn_agent: null
     neutron_ovn_metadata_agent: null
     neutron_ovs_agent: null
     neutron_sriov_agent: null
@@ -409,6 +410,7 @@ pod:
     neutron_rpc_server: null
     neutron_server: null
     neutron_tests: null
+    bootstrap: null
     db_sync: null
   sidecars:
     neutron_policy_server: false
