--- a/charts/octavia/values.yaml
+++ b/charts/octavia/values.yaml
@@ -531,12 +531,14 @@ pod:
     octavia_api: null
     octavia_housekeeping: null
     octavia_worker: null
+    bootstrap: null
     db_sync: null
   runtimeClassName:
     octavia_health_manager: null
     octavia_api: null
     octavia_housekeeping: null
     octavia_worker: null
+    bootstrap: null
     db_sync: null
   user:
     octavia:
