--- a/roles/barbican/tests/runtimeclass_test.yaml
+++ b/roles/barbican/tests/runtimeclass_test.yaml
@@ -5,6 +5,10 @@ tests:
       - templates/deployment-api.yaml
       - templates/pod-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
+    set:
+      bootstrap:
+        enabled: true
     asserts:
       - template: templates/deployment-api.yaml
         documentIndex: 3
@@ -16,6 +20,10 @@ tests:
           path: spec.runtimeClassName
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        notExists:
+          path: spec.template.spec.runtimeClassName
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         notExists:
           path: spec.template.spec.runtimeClassName
 
@@ -24,12 +32,16 @@ tests:
       - templates/deployment-api.yaml
       - templates/pod-rally-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     set:
       pod:
         runtimeClassName:
           barbican_api: kata-clh
           barbican_tests: kata-clh
           db_sync: kata-clh
+          bootstrap: kata-clh
+      bootstrap:
+        enabled: true
     asserts:
       - template: templates/deployment-api.yaml
         documentIndex: 3
@@ -43,6 +55,11 @@ tests:
           value: kata-clh
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        equal:
+          path: spec.template.spec.runtimeClassName
+          value: kata-clh
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         equal:
           path: spec.template.spec.runtimeClassName
           value: kata-clh
