--- a/roles/neutron/tests/priorityclass_test.yaml
+++ b/roles/neutron/tests/priorityclass_test.yaml
@@ -19,7 +19,10 @@ tests:
       - templates/deployment-server.yaml
       - templates/pod-rally-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     set:
+      bootstrap:
+        enabled: true
       network:
         backend:
           - openvswitch
@@ -95,6 +98,10 @@ tests:
           path: spec.priorityClassName
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        notExists:
+          path: spec.template.spec.priorityClassName
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         notExists:
           path: spec.template.spec.priorityClassName
 
@@ -117,7 +124,10 @@ tests:
       - templates/deployment-server.yaml
       - templates/pod-rally-test.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     set:
+      bootstrap:
+        enabled: true
       network:
         backend:
           - openvswitch
@@ -125,15 +135,15 @@ tests:
           - linuxbridge
       pod:
         priorityClassName:
-          neutron_bagpipe_bgp: platform
-          neutron_bgp_dragent: platform
+          bagpipe_bgp: platform
+          bgp_dragent: platform
           neutron_dhcp_agent: platform
           neutron_l2gw_agent: platform
           neutron_l3_agent: platform
           neutron_lb_agent: platform
           neutron_metadata_agent: platform
           neutron_netns_cleanup_cron: platform
-          neutron_ovn_vpn_agent: platform
+          ovn_vpn_agent: platform
           neutron_ovn_metadata_agent: platform
           neutron_ovs_agent: platform
           neutron_sriov_agent: platform
@@ -142,6 +152,7 @@ tests:
           neutron_server: platform
           neutron_tests: platform
           db_sync: platform
+          bootstrap: platform
       manifests:
         daemonset_l2gw_agent: true
         daemonset_bagpipe_bgp: true
@@ -226,6 +237,11 @@ tests:
           path: spec.priorityClassName
           value: platform
       - template: templates/job-db-sync.yaml
+        documentIndex: 3
+        equal:
+          path: spec.template.spec.priorityClassName
+          value: platform
+      - template: templates/job-bootstrap.yaml
         documentIndex: 3
         equal:
           path: spec.template.spec.priorityClassName
