--- a/roles/octavia/tests/priorityclass_test.yaml
+++ b/roles/octavia/tests/priorityclass_test.yaml
@@ -7,6 +7,7 @@ tests:
       - templates/deployment-housekeeping.yaml
       - templates/deployment-worker.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     asserts:
       - template: templates/daemonset-health-manager.yaml
         documentIndex: 4
@@ -26,6 +27,10 @@ tests:
           path: spec.template.spec.priorityClassName
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        notExists:
+          path: spec.template.spec.priorityClassName
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         notExists:
           path: spec.template.spec.priorityClassName
 
@@ -36,6 +41,7 @@ tests:
       - templates/deployment-housekeeping.yaml
       - templates/deployment-worker.yaml
       - templates/job-db-sync.yaml
+      - templates/job-bootstrap.yaml
     set:
       pod:
         priorityClassName:
@@ -44,6 +50,7 @@ tests:
           octavia_housekeeping: platform
           octavia_worker: platform
           db_sync: platform
+          bootstrap: platform
     asserts:
       - template: templates/daemonset-health-manager.yaml
         documentIndex: 4
@@ -67,6 +74,11 @@ tests:
           value: platform
       - template: templates/job-db-sync.yaml
         documentIndex: 3
+        equal:
+          path: spec.template.spec.priorityClassName
+          value: platform
+      - template: templates/job-bootstrap.yaml
+        documentIndex: 1
         equal:
           path: spec.template.spec.priorityClassName
           value: platform
